--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,12 @@
 <resources>
     <string name="app_name">My Dice Roller</string>
     <string name="content_main">This is my Dice Roller app!</string>
-    <string name="dice_d4">D4</string>
-    <string name="dice_d6">D6</string>
-    <string name="dice_d8">D8</string>
-    <string name="dice_d10">D10</string>
-    <string name="dice_d12">D12</string>
-    <string name="dice_d20">D20</string>
-    <string name="dice_d100">D100</string>
+    <string name="dice_d4">4</string>
+    <string name="dice_d6">6</string>
+    <string name="dice_d8">8</string>
+    <string name="dice_d10">10</string>
+    <string name="dice_d12">12</string>
+    <string name="dice_d20">20</string>
+    <string name="dice_d100">100</string>
+    <string name="sum">Sum</string>
 </resources>
